Fixed overlapping nav searchbar on sign in page

--- a/css/signin.css
+++ b/css/signin.css
@@ -236,6 +236,27 @@ body{
 .link a:hover{
     text-decoration: underline;
 }
+@media (max-width: 992px) {
+    .navbar .browse {
+        visibility: hidden;
+        display: none;
+    }
+    .navbar-nav .submenu {
+        visibility: visible;
+        display: block;
+    }
+    .navbar-nav:first-child {
+        padding-top: 10px;
+    }
+    .navbar .search-bar {
+        visibility: hidden;
+        display: none;
+    }
+    .navbar-nav i {
+        visibility: hidden;
+        display: none;
+    }
+}
 @media (max-width: 768px) {
     .navbar .browse {
         visibility: hidden;
